2000-08-28 Elliot Lee <sopwith@redhat.com>
	* util.c (is_recursive_walker): Fix segfault when past was NULL (aka data type has
	no parent).

2000-07-14  Michael Meeks  <michael@helixcode.com>

	* parser.y (positive_int_const): incr. ref count.

1999-10-17  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.8.

1999-06-09  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l:
	* util.[ch]: Integrate Macintosh port changes from Netscape.

	* IDL.h.new.in, parser.y, util.c: Deprecate noscript support.

	* lexer.l (tokreturn): Remove deprecated ``noscript'' keyword.

1999-05-30  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l: Use wildcard start condition extension, since we
	require flex.

1999-05-05  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l: Strip /* */ comments as well, to make life easier for
	alternative input methods.

1999-04-24  Andrew T. Veliath  <andrewtv@usa.net>

	* util.c (IDL_parse_filename):
	(IDL_parse_filename_with_input): Call __IDL_parser_reset after
	parse.

	* configure.in: Print a warning if flex isn't installed (one can
	still compile the source distributed flex scanner, however).

	* lexer.l (__IDL_lex_cleanup): Call YY_NEW_FILE.  Because of this
	we now require flex, this is not in standard lex.

	* parser.y (__IDL_parser_reset): New function; call yyclearin.

1999-04-12  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h.new.in (IDLF_INHIBIT_INCLUDES): New parse flag;
	automatically inhibits included files.

	* util.h (IDLFP_IN_INCLUDES): Internal flag checked when we are
	inside an include file.

	* parser.y (assign_declspec): Wrap assignment, and if we are
	inside an include file check the inhibit include flag.
	(IDL_file_set): Add detection of include files here.

1999-04-01  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h.new.in (IDL_tree_remove_inhibits): Move prototype here
	from util.h.

	* util.c (IDL_tree_optimize): Skip inhibit removal if
	the IDLF_INHIBIT_TAG_ONLY parse flag is specified.
